# clock

./: .gitmodules  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: main_clock.yml
src/: index.html
src/css/: styles.css
src/js/: script.js
volunteer_hours/: __init__.py  app.py
volunteer_hours/api/: ragic.py
volunteer_hours/common/: enums.py  member.py
volunteer_hours/templates/: action.html  index.html  sent.html
